--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -3,7 +3,7 @@ http {
 		listen 80;
 		
 		location ^~ /uploads/ {
-    		root /home/box/web;
+    		root /home/box/web/;
 		}
 
 		location ~* ^.+\.\w+{2,4}$ {
