--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,8 +1,8 @@
 http {
 	server {
-		listen 80;
+		listen 80 default;
 		
-		location ^~ /uploads/ {
+		location = /uploads/ {
     		root /home/box/web/;
 		}
 
