--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,8 +1,8 @@
 server {
 	listen 80 default;
 	
-	location = /uploads/ {
-		root /home/box/web/;
+	location = /uploads {
+		root /home/box/web;
 	}
 
 	location ~* ^.+\.\w+{2,4}$ {
