--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,11 +1,11 @@
 server {
-	listen 80 default;
+	listen 80;
 	
 	location = /uploads {
 		root /home/box/web;
 	}
 
-	location ~* ^.+\.\w+{2,4}$ {
+	location ~* ^.+\.\w+$ {
 		root /home/box/web/public;
 	}
 }
