--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,11 +1,11 @@
 server {
 	listen 80;
 	
-	location = /uploads {
-		root /home/box/web;
+	location ^~ /uploads/ {
+		root /home/box/web/;
 	}
 
 	location ~* ^.+\.\w+$ {
-		root /home/box/web/public;
+		root /home/box/web/public/;
 	}
 }
