--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,6 +1,15 @@
 server {
 	listen 80;
 	
+	location http://127.0.0.1/hello/ {
+		proxy_pass http://0.0.0.0:8080;
+	}
+
+	location http://127.0.0.1/ {
+		proxy_pass http://0.0.0.0:8080;
+	}
+
+
 	location ^~ /uploads/ {
 		root /home/box/web/;
 	}
