--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,12 +1,12 @@
 server {
 	listen 80;
 	
-	location http://127.0.0.1/hello/ {
-		proxy_pass http://0.0.0.0:8080;
+	location 127.0.0.1/hello/ {
+		proxy_pass 0.0.0.0:8080;
 	}
 
-	location http://127.0.0.1/ {
-		proxy_pass http://0.0.0.0:8080;
+	location 127.0.0.1:8080 {
+		proxy_pass 0.0.0.0:8080;
 	}
 
 
