--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -2,11 +2,11 @@ server {
 	listen 80;
 	
 	location 127.0.0.1/hello/ {
-		proxy_pass 0.0.0.0:8080;
+		proxy_pass http://0.0.0.0:8080;
 	}
 
 	location 127.0.0.1:8080 {
-		proxy_pass 0.0.0.0:8080;
+		proxy_pass http://0.0.0.0:8080;
 	}
 
 
