--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,15 +1,14 @@
 server {
 	listen 80;
 	
-	location 127.0.0.1/hello/ {
-		proxy_pass http://0.0.0.0:8080;
-	}
+	
+    location ^~ /hello/ {
+  		proxy_pass http://127.0.0.1:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 
-	location 127.0.0.1:8080 {
-		proxy_pass http://0.0.0.0:8080;
-	}
-
-
+	
 	location ^~ /uploads/ {
 		root /home/box/web/;
 	}
